<resources>
    <string name="app_name">i天气</string>
    <string name="close_nav">关闭侧滑栏</string>
    <string name="open_nav">打开侧滑栏</string>
    <string name="app_thanks">感谢您的使用,这是一个简洁的天气工具,界面借鉴于就看天气,希望带给您便捷,生活本就复杂,
        为何不能保持一颗简洁的心。给本就繁琐的生活带来一缕阳光。
        \n人总需要一点梦想,即使一时的不顺也千万不要放弃。作为一个程序员,我总会遇到各种
        各样的问题,有时候觉得真的困难,可那又怎么样,生活还得继续,而我不会放弃。</string>
    <string name="app_aoubt_me">如果你很喜欢这个小应用,请在github上给我一颗star。再次感谢您对我的认同。</string>
    <string name="open_source_okhttp">• Okhttp: github.com/square/okhttp</string>
    <string name="open_source_Retrofit">• Retrofit: github.com/square/retrofit</string>
    <string name="open_source_BRVAH">• BRVAH: github.com/CymChad/BaseRecyclerViewAdapterHelper</string>
    <string name="open_source_jiukantianqi">• 就看天气界面支持</string>
    <string name="open_source_hefeng">• 和风天气数据支持</string>
</resources>
